MODON MRE BPDEV/force-app/main/default/objects/DDA_Payment_File__c/DDA_Payment_File__c.object-meta.xml
<CustomObject>
    <description>Header for one UAEDDS payment file. uploadPayments submits N payments as a single file and returns one paymentFileID, and getPaymentReqStatus accepts that id and nothing else, so the file is the unit of submission, polling and retry. The header is inserted with Status Submitting before the callout: if the call times out after the bank accepted the file, that row is the durable record of which installments were in flight, and the next run refuses rather than double-debiting.</description>
    <label>DDA Payment File</label>
    <nameField>
        <displayFormat>DDAPF-{00000}</displayFormat>
        <label>Payment File Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DDA Payment Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>