MODON MRE BPDEV/force-app/main/default/objects/DDA_Payment_File__c/fields/Payment_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_File_Id__c</fullName>
    <description>paymentFileID returned by uploadPayments, and the only accepted input to getPaymentReqStatus. Null while the header sits at Submitting, because the id does not exist until the bank replies.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Payment File Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>