MODON MRE BPDEV/force-app/main/default/objects/DDA_Payment_File__c/fields/Payment_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_File_Name__c</fullName>
    <description>paymentFileName sent on uploadPayments, built as dd-payments-&lt;OIC&gt;-&lt;ddMMyyyy&gt;.csv - the pattern the vendor requires on the underlying CSV that OIC builds from the JSON we send. The OIC is the originator code off the mandates being collected, left out when none of them carries one; the date is the due date, not the day the file was made. Not unique: two files for the same originator and due date share a name, and Payment_File_Id__c from the bank is what tells them apart.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment File Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>