MODON MRE BPDEV/force-app/main/default/objects/DDA_Payment_File__c/fields/Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Record_Count__c</fullName>
    <description>Number of payment rows submitted in this file. Written before the callout so a timed-out file still records how many payments were in flight.</description>
    <label>Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>