MODON MRE BPDEV/force-app/main/default/objects/DDA_Payment_File__c/fields/Response_Payload__c.field-meta.xml
<CustomField>
    <fullName>Response_Payload__c</fullName>
    <description>Raw getPaymentReqStatus body, which covers N rows in a single response and has no sensible home on a per-payment record. Retained permanently because this is a money-moving call and the FAB path failing without any trace is the defect this build exists to avoid.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>