MODON MRE BPDEV/force-app/main/default/objects/DDA_Payment_File__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>File lifecycle. Submitting is written BEFORE the callout and is the double-debit guard: a file left at Submitting means the outcome is unknown, not that it failed. Resolve it through getDDADailyReport, never by resubmitting blind.</description>
    <inlineHelpText>A file stuck at Submitting needs a human to confirm against the day-end report before any resubmission.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitting</fullName>
                <default>true</default>
                <label>Submitting</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Partially Settled</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>