MODON MRE BPDEV/force-app/main/default/objects/DDA_Payment_File__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Sum of claimedAmount across the rows in this file. Written before the callout, so a stuck file shows the value at risk.</description>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>