MODON MRE BPDEV/force-app/main/default/objects/DDA_Payment_File__c/fields/Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date__c</fullName>
    <description>When uploadPayments was called. Measured against the vendor cut-off of 20:00 on the day before the due date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Upload Date</label>
    <type>DateTime</type>
</CustomField>