MODON MRE BPDEV/force-app/main/default/objects/DDA_Payment_File__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment_File_Name__c</columns>
    <columns>Payment_File_Id__c</columns>
    <columns>Upload_Date__c</columns>
    <columns>Record_Count__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>