MODON MRE BPDEV/force-app/main/default/objects/DDA_Payment_File__c/listViews/Stuck_Submitting.listView-meta.xml
<ListView>
    <fullName>Stuck_Submitting</fullName>
    <columns>NAME</columns>
    <columns>Payment_File_Name__c</columns>
    <columns>Payment_File_Id__c</columns>
    <columns>Upload_Date__c</columns>
    <columns>Record_Count__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitting</value>
    </filters>
    <label>Stuck - Submitting</label>
</ListView>