MODON MRE BPDEV/force-app/main/default/objects/DDA_Payment_File__c/listViews/Submitted.listView-meta.xml
<ListView>
    <fullName>Submitted</fullName>
    <columns>NAME</columns>
    <columns>Payment_File_Name__c</columns>
    <columns>Payment_File_Id__c</columns>
    <columns>Upload_Date__c</columns>
    <columns>Record_Count__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted</label>
</ListView>